# libdogecoin

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  README.md  autogen.sh  build-log.txt  config  configure.ac  dogecoin-send-tx  dogecoin-spv  dogecointool  libdogecoin  sendtx  spvnode  such  tooltests.py  update_subtrees.sh
.github/workflows/: armv7a.sh  ci.yml  ql.yml
bindings/py_wrappers/: wrappers.py
bindings/py_wrappers/pytest/: address_test.py
build-msvc/: .gitignore  common.init.vcxproj.in  common.vcxproj  libdogecoin_config.h.in  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
build-msvc/msbuild/tasks/: hexdump.targets  replaceinfile.targets
contrib/: gitian-build.sh
contrib/devtools/: gen-ops.py
contrib/examples/: example.c
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/guix/: guix-build.sh  manifest.scm
contrib/guix/libexec/: build.sh  codesign.sh  prelude.bash
contrib/macdeploy/: detached-sig-create.sh
contrib/scripts/: .dockerignore  Dockerfile  README-scripts.md  archive.sh  build.sh  check_lib.sh  cosign.sh  detect.sh  init-buildx.sh  init.sh  pack.sh  package.sh  run.sh  setup.sh  setup_cmake_subdir.sh  sign.sh  test.sh
contrib/sigs/aarch64-linux-gnu-v0.0.1/xanimo/: aarch64-linux-gnu-v0.0.1-checksums.txt  aarch64-linux-gnu-v0.0.1-checksums.txt.sig  xanimo.sig
contrib/sigs/arm-linux-gnueabihf-v0.0.1/xanimo/: arm-linux-gnueabihf-v0.0.1-checksums.txt  arm-linux-gnueabihf-v0.0.1-checksums.txt.sig  xanimo.sig
contrib/sigs/i686-pc-linux-gnu-v0.0.1/xanimo/: i686-pc-linux-gnu-v0.0.1-checksums.txt  i686-pc-linux-gnu-v0.0.1-checksums.txt.sig  xanimo.sig
contrib/sigs/i686-w64-mingw32-v0.0.1/xanimo/: i686-w64-mingw32-v0.0.1-checksums.txt  i686-w64-mingw32-v0.0.1-checksums.txt.sig  xanimo.sig
contrib/sigs/x86_64-apple-darwin14-v0.0.1/xanimo/: x86_64-apple-darwin14-v0.0.1-checksums.txt  x86_64-apple-darwin14-v0.0.1-checksums.txt.sig  xanimo.sig
depends/: Makefile
depends/patches/libgmp/: libgmp.patch
doc/: tools.md
html/: address_8c.html  address_8c_source.html  address_8h.html  address_8h_source.html  aes_8c.html  aes_8c_source.html  aes_8h.html  aes_8h_source.html  annotated.html  arc4random_8c.html  arc4random_8c_source.html  assumptions_8h.html  assumptions_8h_source.html  base58_8c.html  base58_8c_source.html  base58_8h.html  base58_8h_source.html  basic-config_8h.html  basic-config_8h_source.html  bench_8c.html  bench_8c_source.html  bench_8h.html  bench_8h_source.html  bench__ecmult_8c.html  bench__ecmult_8c_source.html  bench__internal_8c.html  bench__internal_8c_source.html  bip32_8c.html  bip32_8c_source.html  bip32_8h.html  bip32_8h_source.html  bip39_8c.html  bip39_8c_source.html  bip39_8h.html  bip39_8h_source.html  bip44_8c.html  bip44_8c_source.html  bip44_8h.html  bip44_8h_source.html  block_8c.html  (+760 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+145 more)
include/dogecoin/: address.h  arith_uint256.h  async.h  auxpow.h  bech32.h  bip32.h  bip39.h  bip44.h  block.h  blockchain.h  blockencoding.h  bloom.h  buffer.h  build_assert.h  byteswap.h  chacha20.h  chainparams.h  common.h  consensus.h  core.h  crypto.h  cstr.h  dogecoin.h  ecc.h  endian.h  hash.h  headersdb.h  headersdb_file.h  internal.h  json_out.h  key.h  koinu.h  libdogecoin.h  map.h  mem.h  moon.h  net.h  portable_endian.h  pow.h  protocol.h  (+23 more)
include/dogecoin/compat/: byteswap.h  portable_endian.h
include/dogecoin/crypto/: aes.h  base58.h  common.h  ecc.h  hash.h  key.h  random.h  rmd160.h  segwit_addr.h  sha2.h
include/dogecoin/net/: net.h  protocol.h  spv.h
include/event2/: buffer.h  bufferevent.h  event-config.h  event.h  util.h  visibility.h
include/test/: utest.h
rpctest/: fetch.py  spvtool.py
src/: address.c  aes.c  arith_uint256.c  auxpow.c  bech32.c  bip32.c  bip39.c  bip44.c  block.c  blockchain.c  blockencoding.c  bloom.c  buffer.c  chacha20.c  chainparams.c  commontools.c  consensus.c  cstr.c  headersdb_file.c  internal.c  json_out.c  key.c  koinu.c  map.c  mem.c  moon.c  net.c  netspv.c  pow.c  protocol.c  psbt.c  pullpush.c  qrengine.c  random.c  rest.c  script.c  scrypt.c  seal.c  segwit_addr.c  serialize.c  (+13 more)
src/cli/: dogecoin-txref.c  sendtx.c  spvnode.c  such.c  tool.c  txref.c
src/crypto/: aes.c  base58.c  ecc.c  ecc_libsecp256k1.c  key.c  random.c  rmd160.c  segwit_addr.c  sha2.c
src/crypto/ctaes/: ctaes.c
src/logdb/: logdb_core.c  logdb_memdb_llist.c  logdb_memdb_rbtree.c  logdb_rec.c  misc.c  red_black_tree.c  stack.c
src/logdb/test/: logdb_tests.c  tests_red_black_tree.c
src/net/: net.c  protocol.c  spv.c
src/py_wrappers/: address_gen.py  block_headers.py
src/secp256k1/: gen_context
src/secp256k1/src/: ecmult_impl.h
src/tools/: dogecoin-send-tx.c  dogecoin-spv.c  dogecointool.c
test/: address_tests.c  aes_tests.c  arith_uint256_tests.c  base58_tests.c  bip32_tests.c  bip39_tests.c  bip44_tests.c  block_tests.c  bloom_tests.c  chacha20_tests.c  cstr_tests.c  ecc_tests.c  hash_tests.c  json_tests.c  key_tests.c  koinu_tests.c  mem_tests.c  moon_tests.c  net_tests.c  netspv_tests.c  opreturn_tests.c  protocol_tests.c  psbt_tests.c  qr_tests.c  random_tests.c  rmd160_tests.c  scrypt_tests.c  serialize_tests.c  sha2_tests.c  signmsg_tests.c  spv_tests.c  tool_tests.c  tpm_tests.c  transaction_tests.c  tx_tests.c  txref_tests.c  unittester.c  utest.h  utils_tests.c  vector_tests.c  (+1 more)
test/data/: psbt.json
wrappers/golang/libdogecoin/: build.sh  libdogecoin.go
wrappers/python/libdogecoin/: libdogecoin.pyx
wrappers/python/pytest/: transaction_test.py
(+15 files in other folders)
